# eRock

./: .dockerignore  .gitignore  AGENTS.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.save  Dockerfile  LICENSE  LICENSE-BEL-1.0  MARKETING_AI_ML.md  MARKETING_DATA_CENTERS.md  MARKETING_HPC.md  MARKETING_INDUSTRIAL_IOT.md  MARKETING_INSURANCE.md  MARKETING_MILITARY.md  NOTICE  README.md  TRADEMARKS.md  deny.toml  openapi.yaml  restore.sh  test.erock
.cargo/: config.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: cargo-deny.yml  dco.yml  publish-image.yml  publish-on-release.yml  reuse.yml
.reuse/: dep5
benches/: simd_vs_scalar.rs
edge/: Cargo.toml
edge/src/: jit_health.rs  main.rs
erock_clean/: Cargo.toml  EROCK_FULL_GUIDE.md  test_erock.py
erock_clean/edge/: Cargo.toml  openapi.yaml
erock_clean/edge/edge/: Cargo.toml
erock_clean/edge/edge/src/: jit_health.rs  main.rs
erock_clean/edge/src/: main.rs
erock_clean/src/: lib.rs
src/: cranelift_demo.rs  interpreter.rs  jit_gate.rs  lexer.rs  lib.rs  main.rs  parser.rs
