[package]
name = "erock"
version = "0.1.0"
edition = "2021"

[dependencies]
cranelift = "0.102.1"
cranelift-codegen = "0.102.1"
cranelift-frontend = "0.102.1"
cranelift-jit = "0.102.1"
cranelift-module = "0.102.1"
cranelift-native = "0.102.1"
simdeez = "1.0"
wide = "0.7"
pyo3 = { version = "0.22", features = ["extension-module"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "simd_vs_scalar"
harness = false
