[package]
name = "erock_edge"
license-file = "../LICENSE"
readme = "../README.md"
repository = "https://github.com/RegularJoe-CEO/eRock"
homepage = "https://github.com/RegularJoe-CEO/eRock"
documentation = "https://github.com/RegularJoe-CEO/eRock/blob/main/EROCK_FULL_GUIDE.md"
keywords = ["axum","http-server","api"]
categories = ["web-programming::http-server"]
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
erock = { path = ".." }   # parent crate
