[workspace]
members = ["edge"]

[package]
name = "erock"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.7"

[dependencies.cranelift-jit]
version = "0.102.1"
optional = true

[features]
default = []
jit = ["cranelift-jit"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
